--- a/vueDemo/package.json
+++ b/vueDemo/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "countup": "^1.8.2",
     "mockjs": "^1.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
